{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 54,
  "lineage": "516658a8-69be-b83e-bb4e-8fe15da297fb",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222668120177:security-group/sg-061102055da000ad4",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-061102055da000ad4",
            "ingress": [],
            "name": "te-eks-lab-qutskAYK-cluster-2024040719202504210000000d",
            "name_prefix": "te-eks-lab-qutskAYK-cluster-",
            "owner_id": "222668120177",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "te-eks-lab-qutskAYK-cluster"
            },
            "tags_all": {
              "Name": "te-eks-lab-qutskAYK-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-03698a02fbbe80603"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222668120177:security-group/sg-02dc373d432f40237",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-02dc373d432f40237",
            "ingress": [],
            "name": "te-eks-lab-qutskAYK-node-2024040719202504200000000c",
            "name_prefix": "te-eks-lab-qutskAYK-node-",
            "owner_id": "222668120177",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "te-eks-lab-qutskAYK-node",
              "kubernetes.io/cluster/te-eks-lab-qutskAYK": "owned"
            },
            "tags_all": {
              "Name": "te-eks-lab-qutskAYK-node",
              "kubernetes.io/cluster/te-eks-lab-qutskAYK": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-03698a02fbbe80603"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3158562701",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-061102055da000ad4",
            "security_group_rule_id": "sgr-0fc3893122bf1c379",
            "self": false,
            "source_security_group_id": "sg-02dc373d432f40237",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1965124744",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02dc373d432f40237",
            "security_group_rule_id": "sgr-0848e67cd39530040",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1100477017",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02dc373d432f40237",
            "security_group_rule_id": "sgr-058f38bb6fadbf938",
            "self": false,
            "source_security_group_id": "sg-061102055da000ad4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-841714216",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02dc373d432f40237",
            "security_group_rule_id": "sgr-0712972a0b45f484a",
            "self": false,
            "source_security_group_id": "sg-061102055da000ad4",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-4218023358",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02dc373d432f40237",
            "security_group_rule_id": "sgr-0f22d1452a70f7682",
            "self": false,
            "source_security_group_id": "sg-061102055da000ad4",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3895841183",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02dc373d432f40237",
            "security_group_rule_id": "sgr-0f9fa4368091b0a9c",
            "self": false,
            "source_security_group_id": "sg-061102055da000ad4",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2358567508",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02dc373d432f40237",
            "security_group_rule_id": "sgr-0ac21955694c2a515",
            "self": false,
            "source_security_group_id": "sg-061102055da000ad4",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3786907555",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02dc373d432f40237",
            "security_group_rule_id": "sgr-0ec4fb72bd6f81fd9",
            "self": false,
            "source_security_group_id": "sg-061102055da000ad4",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3623230777",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02dc373d432f40237",
            "security_group_rule_id": "sgr-045a7a3e71ef01cda",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3995514873",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02dc373d432f40237",
            "security_group_rule_id": "sgr-0d2ecfe21d9c15050",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1249448982",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-02dc373d432f40237",
            "security_group_rule_id": "sgr-02aa00fc6674c130a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222668120177:network-acl/acl-03efd8f23d5ef960f",
            "default_network_acl_id": "acl-03efd8f23d5ef960f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03efd8f23d5ef960f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "222668120177",
            "subnet_ids": [
              "subnet-008e78f88ca7bb44b",
              "subnet-011352a5f336c8dbc",
              "subnet-01fd157ec92a40aab",
              "subnet-08939ee7d6a0ad553",
              "subnet-0a4e69ba9b9ca49dc",
              "subnet-0f6bd4d779c6f5c96"
            ],
            "tags": {
              "Name": "te-lab-vpc-default"
            },
            "tags_all": {
              "Name": "te-lab-vpc-default"
            },
            "vpc_id": "vpc-03698a02fbbe80603"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222668120177:route-table/rtb-04a1fc3e0da91275e",
            "default_route_table_id": "rtb-04a1fc3e0da91275e",
            "id": "rtb-04a1fc3e0da91275e",
            "owner_id": "222668120177",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "te-lab-vpc-default"
            },
            "tags_all": {
              "Name": "te-lab-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-03698a02fbbe80603"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222668120177:security-group/sg-06ea9086aeea41582",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06ea9086aeea41582",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "222668120177",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "te-lab-vpc-default"
            },
            "tags_all": {
              "Name": "te-lab-vpc-default"
            },
            "vpc_id": "vpc-03698a02fbbe80603"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007c21404dcc57fea",
            "domain": "vpc",
            "id": "eipalloc-007c21404dcc57fea",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-129-37-14.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.37.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "te-lab-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "te-lab-vpc-us-east-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222668120177:internet-gateway/igw-03fbf182580dffca2",
            "id": "igw-03fbf182580dffca2",
            "owner_id": "222668120177",
            "tags": {
              "Name": "te-lab-vpc"
            },
            "tags_all": {
              "Name": "te-lab-vpc"
            },
            "vpc_id": "vpc-03698a02fbbe80603"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007c21404dcc57fea",
            "association_id": "eipassoc-010240774500760fe",
            "connectivity_type": "public",
            "id": "nat-0820f8e3254b4758c",
            "network_interface_id": "eni-0907a125a1b76d8fb",
            "private_ip": "10.0.4.208",
            "public_ip": "3.129.37.14",
            "subnet_id": "subnet-008e78f88ca7bb44b",
            "tags": {
              "Name": "te-lab-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "te-lab-vpc-us-east-2a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-054c1310c0908a03c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0820f8e3254b4758c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-054c1310c0908a03c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03fbf182580dffca2",
            "id": "r-rtb-0df25e0daf14867001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0df25e0daf1486700",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222668120177:route-table/rtb-054c1310c0908a03c",
            "id": "rtb-054c1310c0908a03c",
            "owner_id": "222668120177",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "te-lab-vpc-private"
            },
            "tags_all": {
              "Name": "te-lab-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03698a02fbbe80603"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222668120177:route-table/rtb-0df25e0daf1486700",
            "id": "rtb-0df25e0daf1486700",
            "owner_id": "222668120177",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "te-lab-vpc-public"
            },
            "tags_all": {
              "Name": "te-lab-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03698a02fbbe80603"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea5b81566865a6d0",
            "route_table_id": "rtb-054c1310c0908a03c",
            "subnet_id": "subnet-01fd157ec92a40aab"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9f88ffc732e6f42",
            "route_table_id": "rtb-054c1310c0908a03c",
            "subnet_id": "subnet-08939ee7d6a0ad553"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d7f607d1cf25fe5",
            "route_table_id": "rtb-054c1310c0908a03c",
            "subnet_id": "subnet-0a4e69ba9b9ca49dc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d8632ff5e2d0fad",
            "route_table_id": "rtb-0df25e0daf1486700",
            "subnet_id": "subnet-008e78f88ca7bb44b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e2e7ed7eda3326e",
            "route_table_id": "rtb-0df25e0daf1486700",
            "subnet_id": "subnet-0f6bd4d779c6f5c96"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb1886ff0ab5237f",
            "route_table_id": "rtb-0df25e0daf1486700",
            "subnet_id": "subnet-011352a5f336c8dbc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222668120177:subnet/subnet-01fd157ec92a40aab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fd157ec92a40aab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222668120177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "te-lab-vpc-private-us-east-2a",
              "kubernetes.io/cluster/te-eks-lab-qutskAYK": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "te-lab-vpc-private-us-east-2a",
              "kubernetes.io/cluster/te-eks-lab-qutskAYK": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03698a02fbbe80603"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222668120177:subnet/subnet-08939ee7d6a0ad553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08939ee7d6a0ad553",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222668120177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "te-lab-vpc-private-us-east-2b",
              "kubernetes.io/cluster/te-eks-lab-qutskAYK": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "te-lab-vpc-private-us-east-2b",
              "kubernetes.io/cluster/te-eks-lab-qutskAYK": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03698a02fbbe80603"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222668120177:subnet/subnet-0a4e69ba9b9ca49dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4e69ba9b9ca49dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222668120177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "te-lab-vpc-private-us-east-2c",
              "kubernetes.io/cluster/te-eks-lab-qutskAYK": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "te-lab-vpc-private-us-east-2c",
              "kubernetes.io/cluster/te-eks-lab-qutskAYK": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03698a02fbbe80603"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222668120177:subnet/subnet-008e78f88ca7bb44b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008e78f88ca7bb44b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222668120177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "te-lab-vpc-public-us-east-2a",
              "kubernetes.io/cluster/te-eks-lab-qutskAYK": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "te-lab-vpc-public-us-east-2a",
              "kubernetes.io/cluster/te-eks-lab-qutskAYK": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03698a02fbbe80603"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222668120177:subnet/subnet-0f6bd4d779c6f5c96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6bd4d779c6f5c96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222668120177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "te-lab-vpc-public-us-east-2b",
              "kubernetes.io/cluster/te-eks-lab-qutskAYK": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "te-lab-vpc-public-us-east-2b",
              "kubernetes.io/cluster/te-eks-lab-qutskAYK": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03698a02fbbe80603"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222668120177:subnet/subnet-011352a5f336c8dbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011352a5f336c8dbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "222668120177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "te-lab-vpc-public-us-east-2c",
              "kubernetes.io/cluster/te-eks-lab-qutskAYK": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "te-lab-vpc-public-us-east-2c",
              "kubernetes.io/cluster/te-eks-lab-qutskAYK": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03698a02fbbe80603"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:222668120177:vpc/vpc-03698a02fbbe80603",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03efd8f23d5ef960f",
            "default_route_table_id": "rtb-04a1fc3e0da91275e",
            "default_security_group_id": "sg-06ea9086aeea41582",
            "dhcp_options_id": "dopt-06ebd0c00ec182946",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03698a02fbbe80603",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a1fc3e0da91275e",
            "owner_id": "222668120177",
            "tags": {
              "Name": "te-lab-vpc"
            },
            "tags_all": {
              "Name": "te-lab-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}